// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - Ellipsis View More should ellipsis the content and show a view more link, when the length exceeds the max length 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  tooltip="undefined"
>
  <span>
    Lorem ipsum dol...
  </span><div
    class="d-flex"
  >
    
    <div
      class="toggle-view-link link"
    >
       View More 
    </div>
    
  </div>
</pf-ellipsis-view-more>
`;

exports[`UI/Common/Content - Ellipsis View More should show the full content and a view less link, when we are showing full 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  showFull={[Function Boolean]}
  tooltip="undefined"
>
  <span>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </span><div
    class="d-flex"
  >
    
    <div
      class="toggle-view-link link"
    >
       View Less 
    </div>
    
  </div>
</pf-ellipsis-view-more>
`;

exports[`UI/Common/Content - Ellipsis View More should show the full content, when its length is less than the max 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  tooltip="undefined"
>
  <span>
    Lorem Ipsum
  </span>
</pf-ellipsis-view-more>
`;
